# agenture-loop

./: CLAUDE.md  README.md  TODO.md
.claude/: settings.json
docs/: agn-specification.md
plugins/agn/: README.md
taskman/: .gitignore  README.md  pyproject.toml
taskman/src/taskman/: __init__.py  cli.py
taskman/src/taskman/commands/: __init__.py  close.py  convert.py  help_cmd.py  list_cmd.py  migrate.py  move.py  new.py  queries.py  search.py  show.py  ui.py  validate.py  worktree_status.py
taskman/src/taskman/model/: __init__.py  graph.py  ids.py  layout.py  names.py  yaml_io.py
taskman/tests/: test_command_close.py  test_command_convert.py  test_command_help.py  test_command_list.py  test_command_migrate.py  test_command_move.py  test_command_new.py  test_command_queries.py  test_command_search.py  test_command_show.py  test_command_ui.py  test_command_validate.py  test_command_worktree_status.py  test_model_graph.py  test_model_ids.py  test_model_layout.py  test_model_names.py  test_model_yaml_io.py  test_smoke.py  test_validate_graph.py
tasks/: _migration_report.json
tasks.legacy/: docs-sync-queue.txt
tasks.legacy/backlog/: 20260525_feedback_loop_infrastructure.md
tasks.legacy/done/: 20260525_create_doc_maintenance_rules.md  20260525_create_qa_rules.md  20260525_create_unified_lifecycle_skills.md  20260525_delete_obsolete_artifacts.md  20260525_delete_old_lifecycle_skills.md  20260525_switch_docs_to_new_skill_names.md  20260525_verify_skill_arg_routing.md  20260526_escalation_routing_message.md  20260527_tm_convert_command.md  (+12 more)
(+103 files in other folders)
