[project]
name = "taskman"
version = "0.1.0"
description = "Uniform recursive work-item management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VovKa" }]
dependencies = [
    "typer>=0.12",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
taskman = "taskman.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskman"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
